stylesheets/styles.css
/* Default layout */

html {
	font-size: 16px;
}

body {
    font-family: 'Lato', helvetica, arial, sans-serif;
    font-size: 1.4em;
    font-weight: 300;
    -webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
    background-color: #FFF;
    color: #666;
}

h1, h2, h3, h4, h5 {
	margin-top: 0;
	line-height: 1;
    font-family: 'Lato', helvetica, arial, sans-serif;
}
h1 {
	font-size: 2.6em;
}
h2 {
	margin-bottom: 30px;
	font-weight: 900;
}

a {
	color: #666;
	text-decoration: none;
	border-bottom: 3px solid #666;
	-webkit-transition: all 500ms ease;
    -o-transition: all 500ms ease;
    transition: all 500ms ease;
}
a:hover {
	color: #666;
	border-color: #27AE60;
	text-decoration: none;
}

.btn {
    padding: 15px 30px;
    text-transform: uppercase;
    border: none;
    border-radius: 3px;
    background: #27AE60;
    box-shadow: 0 3px 0 #18703D;
    color: #FFF;
    text-decoration: none;
}
.btn:hover {
    background-color: #18703D;
    color: #FFF;
}

/* Navbar */

.navbar-default {
    overflow: hidden;
    box-shadow: none;
    border: 0;
    background-color: rgba(249, 249, 249, 0.95) !important;
    background-color: transparent !important;
	background-image: none;
}
.navbar-default.after-header {
	background-color: rgba(255, 255, 255, 0.9) !important;
}

	.navbar-fixed-top li {
		margin: 15px 5px 15px 0;
	}

		.navbar-fixed-top a {
			padding: 10px 10px !important;
			background-color: rgba(0, 0, 0, 0.1);
			border-radius: 3px;
			border-bottom: 0;
			color: #FFF !important;
			text-shadow: 0;
			font-size: 18px;
		}
		.navbar-fixed-top a:hover {
			background-color: rgba(0, 0, 0, 0.2) !important;
		}
		.navbar-default.after-header a {
			background-color: #EEE;
			color: #666 !important;
		}
		.navbar-default.after-header a:hover {
			background-color: #CCC;
		}
		.navbar-fixed-top a.active{
			background-color: #8B8B8B!important;
			color: #fff!important;
		}

/* Header */

#header {
	padding: 120px 0;
	background-color: #27AE60;
    background: url('../images/header2.jpg') center 60px no-repeat #27AE60;
    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.4);
	color: #FFF;
	min-height: 975px;
}

	#header header {
		margin-bottom: 80px;
	}

		#header header h1 {
			margin-right: 326px;
			font-weight: bold;
		}

		#header header p {
		}

		#header header a {
			position: absolute;
			top: -50px; right: 0;
			border: 0;
			opacity: 1;
			-webkit-transition: all 500ms ease;
		    -o-transition: all 500ms ease;
		    transition: all 500ms ease;
		    background-color: rgba(0, 0, 0, 0.45);
			border-radius: 50%;
			-ms-transform: rotate(-20deg);
		    -webkit-transform: rotate(-20deg);
		    transform: rotate(-20deg);
		}

		#header header a:hover {
			opacity: 0.6;
		}

			#header header a img {
				padding: 45px 45px 0;
				-ms-transform: rotate(20deg);
				-webkit-transform: rotate(20deg);
				transform: rotate(20deg);
			}

		#header header #see_chronicles {
			top: 300px;
			left: 0;
			right: auto;
			-ms-transform: rotate(20deg);
			-webkit-transform: rotate(20deg);
			transform: rotate(20deg);
		}

			#header header #see_chronicles img {
				padding: 45px 20px 0;
				-ms-transform: rotate(-20deg);
				-webkit-transform: rotate(-20deg);
				transform: rotate(-20deg);
			}

	#header p {
		margin-top: 30px;
		width:50%;
	}

/* About */

#about {
	margin: 80px auto;
}

	#about header img {
		float: right;
		margin-left: 50px;
		width: 300px;
		height: 300px;
		background-color: #EEE;
	}

	#about header p {
		font-size: 1.5em;
	}

	#about a.email, #about a.twitter, #about a.facebook, #about a.linkedin {
		display: inline-block;
		margin: 15px 5px 0 0;
		width: 60px;
		height: 60px;
		line-height: 60px;
		border-radius: 50%;
		text-align: center;
		text-decoration: none;
		background-color: #999;
		border: 0;
		font-size: 30px;
		color: #FFF;
		-webkit-transition: all 500ms ease;
	    -o-transition: all 500ms ease;
	    transition: all 500ms ease;
	}
	#about a.email:hover {
		background-color: #C0392B;
	}
	#about a.facebook:hover {
		background-color: #3B5998;
	}
	#about a.twitter:hover {
		background-color: #00C3F8;
	}
	#about a.linkedin:hover {
		background-color: #65ADD2;
	}

/* Events */

#events {
	margin-bottom: 80px;
}

	#events .table {
		margin: 60px 0 80px 0;
		font-size: 20px;
	}

		#events .table tr td:last-child {
			text-align: right;
		}

	#events .services .features {
		padding: 0;
	}
		#events #support .features.banner {
			padding: 0 15px;
			overflow: hidden;
		}

			#events #support .features.banner img{
				width: 100%;
				border: 2px solid #818181;
			}

		#events #support .features .col-md-4 {
			margin-bottom: 30px;
		}

		#events .services .features .col-md-4 {
			min-height: 90px;
			margin-bottom: 60px;
		}

			#events #formations {
				margin-bottom: 120px;
			}

				#events #formations img {
					width: 100%;
					border: 2px solid #818181;
					margin-bottom: 35px;
				}

			#events #support a {
				font-size: 85%;
			}

			#events #support .features {
				margin-top: 30px;
			}

			#events #support .features > div > div{
				background-color: #EEE;
				padding: 15px;
				border: 1px solid #CACACA;
				min-height: 120px;
			}

			#events .services .features h3 {
				font-weight: bold;
				min-height: 30px;
			}

			#events .services .features ul {
				font-size: 80%;
				margin-bottom: 30px;
				min-height: 0;
			}

			#events .services .btn {
				margin: 15px 0 30px;
			}

				#events .services .features .btn i {
					margin-right: 5px;
					line-height: 1;
					font-size: 16px;
				}

			#events .services .features label, #events .services .features p {
				font-size: 85%;
			}

			#events .services .features label {
				min-height: 40px;
			}

				#events .services .features label > span{
					font-weight: normal;
				}

			#events .services .features p strong, #events .services .features label, #events .services .features h3 {
				color: #818181;
			}

				#events .services .features label > span {
					color: #666;
				}

/* Photos */

#photos {
	margin: 80px auto;
}

	#photos header {
		margin-bottom: 60px;
		padding-top: 80px;
		border-top: 1px solid #CCC;
	}

		#photos header p {
			font-size: 1.5em;
		}

	#photos .photos a {
		display: block;
		margin-bottom: 15px;
		border: 10px solid #F1F1F1;
	}
	#photos .photos a:hover {
		border-color: #DDD;
	}

		#photos .photos a img {
			width: 100%;
		}

	.videos {
	}

		.videos > div > div {
			text-align: center;
			background-color: #F1F1F1;
			border: 10px solid #F1F1F1;
		}

/* Contact */

#contact {
	margin: 80px auto;
}

	#contact h3 {
		margin-bottom: 30px;
		padding-top: 120px;
		border-top: 1px solid #CCC;
	}

	#contact p {
		margin-top: 120px;
		font-size: 18px;
	}

	#contact .btn i {
		margin-right: 5px;
	}

/* Medium devices (desktops, 992px and up) */
@media screen and (min-width: 992px) {
	.navbar-fixed-top a {
		padding: 10px 15px !important;
	}

	#header p {
		width: 100%;
	}

	#events .services .btn {
		margin: 60px 0 30px;
	}

	#events .services .features label {
		min-height: 100px;
	}

	#events .services .features h3 {
		font-weight: bold;
		min-height: 75px;
	}

	#events .services .features ul {
		min-height: 175px;
	}

	#events .services .features .col-md-4, #events #support .features .col-md-4 {
		margin-bottom: 0px;
	}

	#events #support .features > div > div{
		min-height: 320px;
	}

	#header header #see_chronicles {
		top: 200px;
	}
}

@media (min-width: 1300px) {

	body {
	    font-size: 1.5em;
	}

	h1 {
		font-size: 2.8em;
	}

    #header {
		padding: 220px 0;
	}

		#header header {
			margin-bottom: 120px;
		}

			#header header h1 {
				margin-right: 0;
			}

			#header header a {
				top: -50px; right: -80px;
			}

	#about, #photos, #contact {
		margin: 120px auto;
	}

		#photos header {
			padding-top: 120px;
		}

	#events {
		margin-bottom: 120px;
	}

		#events .table {
			margin: 60px 0 120px 0;
		}
}

